latest backend fix for dev and prod (07/05/2026)